--- a/css/03_flex2.css
+++ b/css/03_flex2.css
@@ -1,23 +1,18 @@
 .flex-container {
   /*
-viewport : 현재 화면에서 보여지고 있는 영역(현재 기기, 프로그램 화면)
+    viewport : 현재 화면에서 보여지고 있는 영역(현재 기기, 프로그램 화면)
 
-vh(viewport Height) : 현재 화면의     높이를 나타내는 단위
-vw(viewport Width) : 현재 화면의 가로 너비를 나타내는 단위
+    vh(viewport Height) : 현재 화면의      높이를 나타내는 단위
+    vw(viewport Width) :  현재 화면의 가로 너비를 나타내는 단위
 
-100vh == 현재 화면 높이 100%
-*/
-  height: 75vh;
+    100vh == 현재 화면 높이 100%
+  */
+  height: 75vh; /* 현재 화면 높이의 75% 만 차지하겠다.*/
   display: flex;
-/* ***** flex-wrap ***** */
-/* item이 한/여러 줄로 배치되게 지정하는 속성
-기본값 : nowrap
-*-
-<div class="menu-detail">  
-<!-- 메뉴 이미지 추후 추가>
-flex-wrap: wrap;
-align-content: space-between;  
-
-
-
+  /* ***** flex-wrap ***** */
+  /* item이 한/여러 줄로 배치되게 지정하는 속성
+        기본값 : nowrap
+    */
+  flex-wrap: wrap-reverse;
+  align-content: center;
 }
